--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,15 @@
 .App {
-  text-align: center;
+    display: grid;
+    grid-template-areas:    "logo user user properties"
+                            "toolbar source brain properties"
+                            "statusline statusline statusline properties";
+    grid-template-columns: auto auto 1fr auto;
+    grid-template-rows: auto 1fr auto;
+    border: var(--debug-border);
+    min-width: 100%;
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    gap: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
