--- a/src/components/brain/brain.css
+++ b/src/components/brain/brain.css
@@ -1,11 +1,20 @@
 .brain-container {
     display: grid;
     grid-template-rows: auto 1fr;
+    grid-area: brain;
+    border: var(--debug-border);
+    padding: 5px;
+    max-height: 100%;
+    min-height: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
-.brain-toolbar {
-    display: flex;
-}
 .brain-neurons {
     display: flex;
+    flex-direction: column;
+    max-height: 100%;
+    min-height: 100%;
+    height: 100%;
+    overflow: auto;
 }
