--- a/src/components/brain/brain.css
+++ b/src/components/brain/brain.css
@@ -12,7 +12,7 @@
 
 .brain-neurons {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     max-height: 100%;
     min-height: 100%;
     height: 100%;
