--- a/src/components/brain/brain.css
+++ b/src/components/brain/brain.css
@@ -14,11 +14,15 @@
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-rows: auto auto auto;
+    font-size: small;
 }
 
 .brain-queue-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
+    max-width: 100%;
+    width: 100%;
+    overflow: auto;
 }
 
 .brain-queue-message {
